adding test - refactoring swagger doc - refactoring the project
