# src/app/users/route.js
@@ -1,9 +1,11 @@
 const { Router } = require('express');
 const controller = require('./controller');
+const { verify } = require('../../middlewares/authenticate');
 const router = new Router();
 
 //Buscar sobre verbos rest para rutas
 router.route('/').post((req, res) => controller.createUser(req, res));
 router.route('/login').post((req, res) => { controller.signIn(req, res) });
+router.route('/:username').delete(verify, (req, res) => { controller.deleteUser(req, res) })
 
 module.exports = router;
